# MsJa

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  run_mcp.py  setup.sh
.claude/: settings.json
.claude/agents/: persona-evaluator.md  secretary-executor.md  secretary-planner.md
.claude/rules/: persona-injection.md  safety.md
.claude/skills/: calendar-management.md  email-management.md  memory-manage.md  persona-reflect.md  research-summarize.md  task-tracking.md
.claude/skills/nanobanana-edit/: SKILL.md
.claude/skills/nanobanana-edit/scripts/: edit.py
.claude/skills/nanobanana-pro/: SKILL.md
.claude/skills/nanobanana-pro/scripts/: generate.py
hooks/: post_interaction.py  reflection_check.py  session_start.py
schema/: 001_init.sql  002_persona_image.sql  003_lore.sql  004_documents.sql  005_calendar.sql  006_todos.sql  007_emails.sql  008_emails_add_summary_body.sql
scripts/: seed_lore.py  start_web.sh
src/: avatar_context.py  calendar.py  db.py  documents.py  dotenv.py  mcp_server.py  memory.py  persona.py  reflection.py  schema.py  signals.py  todos.py
tests/: conftest.py  test_memory.py  test_persona.py  test_reflection.py
web/: app.py
web/static/css/: shell.css  style.css
web/static/js/: main.js  terminal.js
web/templates/: base.html  base_inner.html  calendar.html  dashboard.html  document_detail.html  documents.html  emails.html  files.html  images.html  lore.html  memories.html  reflections.html  settings.html  shell.html  todos.html
